--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,24 @@
 Babel==2.6.0
-Django==2.1.1
+certifi==2019.3.9
+chardet==3.0.4
+defusedxml==0.6.0
+dj-database-url==0.5.0
+Django==2.1.5
 django-phonenumber-field==2.0.1
+gunicorn==19.9.0
+idna==2.8
+oauthlib==3.0.1
 phonenumbers==8.9.14
 Pillow==5.2.0
+psycopg2==2.8.2
+PyJWT==1.7.1
+python3-openid==3.1.0
 pytz==2018.5
+requests==2.22.0
+requests-oauthlib==1.2.0
+six==1.12.0
+social-auth-app-django==3.1.0
+social-auth-core==3.2.0
+urllib3==1.25.3
 virtualenv==16.0.0
+whitenoise==4.1.2
